update to java17 (#13)