@@ -9,18 +9,18 @@ ext.githubProjectName = rootProject.name // Change if github project name is not
 subprojects {
 //    apply plugin: 'nebula.netflixoss'
 //    apply plugin: 'nebula.provided-base'
-    apply plugin: 'java'
+    apply plugin: 'java-library'
     apply plugin: 'maven-publish'
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = 17
+    targetCompatibility = 17
 
     repositories {
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        compile 'com.google.code.findbugs:jsr305:3.0.1'
-        testCompile('log4j:log4j:1.2.16')
+        implementation 'com.google.code.findbugs:jsr305:3.0.1'
+        testImplementation('log4j:log4j:1.2.16')
     }
 
     task sourcesJar(type: Jar) {
@@ -35,12 +35,16 @@ subprojects {
 
     group = "com.netflix.${githubProjectName}"
 
-    //Java 8 has JavaDoc linting enabled by default and will fail
+    //JavaDoc linting is enabled by default and will fail
     tasks.withType(Javadoc).all {
       options.addBooleanOption('Xdoclint:none', true)
     }
 
-    tasks.withType(Test) { forkEvery = 1 }
+    tasks.withType(Test) {
+        forkEvery = 1
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/java.util=ALL-UNNAMED'
+    }
     test {
         maxHeapSize = '2g' // or however much memory the tests need
         testLogging {
@@ -75,51 +79,51 @@ subprojects {
 
 project(':archaius-core') {
     dependencies {
-        compile 'commons-configuration:commons-configuration:1.8'
-        compile 'org.slf4j:slf4j-api:1.6.4'
-        compile 'com.google.guava:guava:16.0'
-        compile 'com.fasterxml.jackson.core:jackson-annotations:2.4.3'
-        compile 'com.fasterxml.jackson.core:jackson-core:2.4.3'
-        compile 'com.fasterxml.jackson.core:jackson-databind:2.4.3'
-        testCompile 'junit:junit:4.11'
-        testCompile 'org.slf4j:slf4j-simple:1.7.5'
-        testCompile 'org.apache.derby:derby:10.8.2.2'
-        testCompile 'org.apache.commons:commons-io:1.3.2'
-        testCompile files('src/test/resources/classpathTestResources.jar')
+        api 'commons-configuration:commons-configuration:1.8'
+        api 'org.slf4j:slf4j-api:1.6.4'
+        api 'com.google.guava:guava:16.0'
+        api 'com.fasterxml.jackson.core:jackson-annotations:2.4.3'
+        api 'com.fasterxml.jackson.core:jackson-core:2.4.3'
+        api 'com.fasterxml.jackson.core:jackson-databind:2.4.3'
+        testImplementation 'junit:junit:4.11'
+        testImplementation 'org.slf4j:slf4j-simple:1.7.5'
+        testImplementation 'org.apache.derby:derby:10.8.2.2'
+        testImplementation 'org.apache.commons:commons-io:1.3.2'
+        testImplementation files('src/test/resources/classpathTestResources.jar')
 
     }
 }
 
 project(':archaius-aws') {
     dependencies {
-        compile project(':archaius-core')
-        compile("software.amazon.awssdk:dynamodb:2.29.17")
-        compile("software.amazon.awssdk:s3:2.29.17")
-        testCompile 'junit:junit:4.11'
-        testCompile 'org.mockito:mockito-all:1.9.5'
-        testCompile 'org.slf4j:slf4j-simple:1.6.4'
+        implementation project(':archaius-core')
+        implementation("software.amazon.awssdk:dynamodb:2.29.17")
+        implementation("software.amazon.awssdk:s3:2.29.17")
+        testImplementation 'junit:junit:4.11'
+        testImplementation 'org.mockito:mockito-all:1.9.5'
+        testImplementation 'org.slf4j:slf4j-simple:1.6.4'
     }
 }
 
 project(':archaius-typesafe') {
     dependencies {
-        compile project(':archaius-core')
-        compile 'com.typesafe:config:1.2.1'
-        testCompile 'junit:junit:4.11'
-        testCompile 'org.slf4j:slf4j-simple:1.6.4'
+        implementation project(':archaius-core')
+        implementation 'com.typesafe:config:1.2.1'
+        testImplementation 'junit:junit:4.11'
+        testImplementation 'org.slf4j:slf4j-simple:1.6.4'
     }
 }
 
 project(':archaius-etcd') {
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = 17
+    targetCompatibility = 17
 
     dependencies {
-        compile project(':archaius-core')
-        compile 'com.google.guava:guava:19.0'
-        compile 'io.fastjson:etcd-client:0.33'
-        testCompile 'junit:junit:4.11'
-        testCompile 'org.mockito:mockito-all:1.9.5'
-        testCompile 'org.slf4j:slf4j-simple:1.6.4'
+        implementation project(':archaius-core')
+        implementation 'com.google.guava:guava:19.0'
+        implementation 'io.fastjson:etcd-client:0.33'
+        testImplementation 'junit:junit:4.11'
+        testImplementation 'org.mockito:mockito-all:1.9.5'
+        testImplementation 'org.slf4j:slf4j-simple:1.6.4'
     }
 }
